# nexus

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  commands.md  kt.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
nexus/: __init__.py
nexus/ai/: __init__.py  embeddings.py  engine.py  middleware.py  rag.py
nexus/auth/: __init__.py  jwt.py  rbac.py
nexus/cache/: __init__.py  memory.py
nexus/cli/: __init__.py  main.py
nexus/core/: __init__.py  app.py  openapi.py  request.py  response.py  routing.py
nexus/di/: __init__.py  dependencies.py
nexus/middleware/: __init__.py  base.py  cors.py  logging.py  rate_limit.py
nexus/orm/: __init__.py  base.py  fields.py  manager.py
nexus/tasks/: __init__.py  queue.py
nexus/websocket/: __init__.py  connection.py
tests/: helpers.py  test_ai.py  test_auth.py  test_cache.py  test_core.py  test_di.py  test_middleware.py  test_orm.py  test_tasks.py  test_websocket.py
